WIP. Having problems with routes mixing annotation and rest

--- a/sfi/app/config/config.yml
+++ b/sfi/app/config/config.yml
@@ -72,6 +72,9 @@ fos_rest:
     exception:
         codes:
             'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
+sensio_framework_extra:
+    view:    { annotations: false }
+    router:  { annotations: true }
 
 ilios_legacy_ci:
     session:
