--- a/sfi/src/Ilios/CoreBundle/Resources/config/routing.yml
+++ b/sfi/src/Ilios/CoreBundle/Resources/config/routing.yml
@@ -10,13 +10,14 @@ ilios_core_objective:
     prefix: /v1
     resource: "Ilios\CoreBundle\Controller\ObjectiveController"
     name_prefix:  api_1_
-ilios_core_user:
-    type: rest
-    prefix: /v1
-    resource: "Ilios\CoreBundle\Controller\UserController"
-    name_prefix:  api_1_
 ilios_core_currentsession:
     type: rest
     prefix: /v1
     resource: "Ilios\CoreBundle\Controller\CurrentsessionController"
     name_prefix:  api_1_
+#Testing annotations for paramconverter, routing, etc
+ilios_core_user:
+    type: annotation
+    prefix: /v1
+    name_prefix: api_1_
+    resource: "Ilios\CoreBundle\Controller\UserController"
