Fixing things for DI, + comments from PR

--- a/sfi/app/config/parameters.yml.dist
+++ b/sfi/app/config/parameters.yml.dist
@@ -18,4 +18,4 @@ parameters:
     debug_redirects:        false
     use_assetic_controller: true
 
-    code_igniter_session_cookie_name: ci_session
+    code_igniter_session_cookie_name: CI_SESSION
