--- a/sfi/app/config/config.yml
+++ b/sfi/app/config/config.yml
@@ -76,6 +76,11 @@ sensio_framework_extra:
     view:    { annotations: false }
     router:  { annotations: true }
 
+jms_di_extra:
+    locations:
+        all_bundles: false
+        bundles: [IliosCoreBundle]
+
 ilios_legacy_ci:
     session:
         encryption_key: "%code_igniter_session_cookie_name%"
