--- a/sfi/composer.json
+++ b/sfi/composer.json
@@ -22,7 +22,8 @@
         "friendsofsymfony/rest-bundle": "1.4.*",
         "jms/serializer-bundle": "0.13.*",
         "nelmio/api-doc-bundle": "2.*",
-        "jms/di-extra-bundle": "dev-master"
+        "jms/di-extra-bundle": "dev-master",
+        "voryx/restgeneratorbundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "@stable",
