--- a/sfi/app/config/config.yml
+++ b/sfi/app/config/config.yml
@@ -9,7 +9,7 @@ framework:
         resource: "%kernel.root_dir%/config/routing.yml"
         strict_requirements: ~
     form:            ~
-    csrf_protection: ~
+    csrf_protection: false #only use for public API
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
@@ -65,14 +65,38 @@ swiftmailer:
     spool:     { type: memory }
 
 fos_rest:
+    routing_loader:
+        default_format: json
+    param_fetcher_listener: true
     body_listener: true
-    format_listener:
-        rules:
-          - { path: '^/', priorities: ['html','json','xml','css','js'], fallback_format: html, prefer_extension: true }
-    exception:
-        codes:
-            'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
+    body_converter:
+        enabled: true
+    view:
+        view_response_listener: force
+#    format_listener:
+#        rules:
+#          - { path: '^/', priorities: ['html','json','xml','css','js'], fallback_format: html, prefer_extension: true }
+#    exception:
+#        codes:
+#            'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
+
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+    paths:
+        '^/api/':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+
 sensio_framework_extra:
+    request: { converters: true }
     view:    { annotations: false }
     router:  { annotations: true }
 
